fix small formating
